# godot-support

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  readme.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  editor-plugin-ci.yml  editor-plugin-make-build.yml  editor-plugin-release.yml  editor-plugin-tests.yml  test-package.yml
community/: build.gradle.kts  plugin-content.yaml  readme.md  settings.gradle.kts
community/.run/: Run IDE with Plugin.run.xml
community/gradle/: libs.versions.toml
community/rider-godot-community/: build.gradle.kts  settings.gradle.kts
community/rider-godot-community/.run/: Run IDE with Plugin.run.xml
debugger/: Directory.Build.props
debugger/debugger-worker/: Directory.Build.targets  PackagesLock.targets  Subplatform.Root
debugger/debugger-worker/src/: DebuggerWorkerHost.cs  debugger.csproj
gdscript/: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  GD_SDK-0.4.1.7z  GD_SDK-0.4.11.7z  GD_SDK-0.4.13.7z  GD_SDK-0.4.7.7z  GD_SDK-0.4.7z  GD_SDK-4.0.0.7z  GD_SDK.7z  LICENSE  Makefile  README.md  TODOs.md  annotationParser.php  build.gradle  build.gradle.kts  build_java.gradle  build_kotlin.gradle  classParser.php  gd_sdk-0.1.7z  gradle.properties  gradlew  gradlew.bat  idea-flex.skeleton  operandParser.php  plugin-content.yaml  settings.gradle  settings.gradle.kts  templateParser.php
gdscript/.github/: pull_request_template.md
gdscript/.junie/: guidelines.md
gdscript/.run/: Run IDE with Plugin.run.xml
gdscript/build_files/: @GdScript.xml  readme.md
gdscript/documentation/: auto-documentation.md  features.md  installation.md  settings.md  trait.md
gdscript/documentation/contribution/: code_flow.md  local_setup.md  parser_tests.md  souce_code.md  tests.md
gdscript/dotnet/: NugetDependencies.csproj  NugetDependencies.sln
gdscript/gradle/: libs.versions.toml
gdscript/php/: annotationParser.php  classParser.php  operandParser.php  sdk.nuspec  sdkBuilder.php  templateParser.php
gdscript/scripts/: api_dumper.gd
gdscript/sdk/: GdSdk 4.0.1.7z  GdSdk 4.0.2.7z  GdSdk 4.0.3.7z  GdSdk 4.0.4.7z  GdSdk 4.0.7z  GdSdk 4.1.1.7z  GdSdk 4.1.2.7z  GdSdk 4.1.3.7z  GdSdk 4.1.4.7z  GdSdk 4.1.7z  GdSdk 4.2.1.7z  GdSdk 4.2.2.7z  GdSdk 4.2.7z  GdSdk Master.7z
gdscript/sdkBuilder/: build.gradle.kts  gradle.properties
godot-editor-addon/: .gitignore  CMakeLists.txt  CMakePresets.json  project.godot  run-tests.sh
godot-editor-addon/addons/rider-plugin/: CONTRIBUTING.md  README.md  plugin.cfg  presets.json  rider-plugin.gd  rider-plugin.gd.uid
godot-editor-addon/addons/rider-plugin/cpp/: CMakeLists.txt
godot-editor-addon/addons/rider-plugin/cpp/src/: rider_locator_gd.cpp  rider_path_locator.h
godot-editor-addon/addons/rider-plugin/scripts/: editor_settings_util.gd  json_utils.gd.uid
godot-editor-addon/addons/rider-plugin/scripts/api_dump/: api.gd  api.gd.uid
godot-editor-addon/addons/rider-plugin/scripts/locator/: rider_locator_service.gd
godot-editor-addon/addons/rider-plugin/scripts/presets/: preset_applier.gd  preset_applier.gd.uid
godot-editor-addon/native/: run-tests.sh
godot-editor-addon/native/rider-plugin/: CMakeLists.txt  README.md
godot-editor-addon/native/rider-plugin/doc_classes/: RiderLocator.xml
godot-editor-addon/native/rider-plugin/src/: register_types.cpp  rider_locator_gd.cpp  rider_locator_gd.h  rider_path_locator.h  rider_path_locator_common.cpp  rider_path_locator_linux.cpp  rider_path_locator_mac.cpp  rider_path_locator_windows.cpp
godot-editor-plugin/: CMakeLists.txt  README.md  project.godot
godot-editor-plugin/rider-plugin/: README.md  SConstruct  gdext.vcxproj  rider-plugin.sln
resharper/: Directory.Build.props  Directory.Build.targets  PackagesLock.targets  Subplatform.Root  Subplatform.Snk  godot-support.sln  godot-support.sln.DotSettings  rider-godot.sln  rider-godot.sln.DotSettings
resharper/.run/: runIde.run.xml
resharper/GodotEditor/: EntryPoint.cs  GodotEditor.csproj  MainThreadDispatcher.cs  ProtocolCompatibility.cs  ProtocolInstance.cs  RiderProtocolController.cs  TestDispatcher.cs  TestEditorPlugin.cs  TimerBasedDispatcher.cs
resharper/GodotTools.IdeMessaging/: GodotTools.IdeMessaging.csproj
resharper/debugger/: DebuggerOptions.cs  LoggerHelper.cs  MetadataTypeEx.cs  debugger.csproj
resharper/gradle-launcher/: gradle-launcher.csproj
resharper/src/: IGodotZone.cs  ZoneMarker.cs  rider-godot.csproj
resharper/test/: Directory.Build.props
rider/: CHANGELOG.md  build.gradle.kts  features.md  gradle.properties  gradlew  gradlew.bat  intellij-updater.json  renovate.json  settings.gradle.kts
rider-godot/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
rider/gradle/: libs.versions.toml
rider/protocol/: build.gradle.kts
scons-support/: SConstruct
(+4266 files in other folders)
